# citation-sentinel

./: .gitignore  CONTRIBUTING.md  LAUNCH.md  README.md  pyproject.toml
sentinel/: __init__.py  classify.py  cli.py  dashboard.py  discover.py  extract.py  inventory.py  report.py  validate.py
tests/: test_classify.py  test_discover.py  test_extract.py  test_inventory.py  test_validate.py
tests/fixtures/: sample_paper.md  sample_refs.bib  sample_refs.json  sample_refs.ris  sample_refs.xml
