[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citation-sentinel"
version = "0.1.0"
description = "Open-source citation verification for independent researchers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jay Carpenter", email = "jay@secs.observer" },
]
keywords = ["citation", "verification", "research", "crossref", "doi", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[project.urls]
Homepage = "https://github.com/JustNothingJay/citation-sentinel"
Repository = "https://github.com/JustNothingJay/citation-sentinel"
Issues = "https://github.com/JustNothingJay/citation-sentinel/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
